--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 </head>
 <body>
     <header>
-        <div>
-            <a href="index.html"><img id="logo" src="/src/logo.png"></a>
-            <nav >
-                <ul class="headelements">
-                    <li><a href="index.html">INÍCIO</a></li>
-                    <li><a href="about.html">SOBRE</a></li>
-                    <li><a href="contact.html">CONTATE-NOS</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <a href="index.html"><img src="/src/logo.png"></a>
+                </div>
+                    <ul>
+                        <li><a href="index.html">INÍCIO</a></li>
+                        <li><a href="about.html">SOBRE</a></li>
+                        <li><a href="contact.html">CONTATO</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
+                    </ul>
+            </div>
+        </nav>
     </header>
+
     <main>
         <h1>Título</h1>
         <p>Lorem ipsum dolor sit amet consectetur, 
